# bank-analytics

./: README.md  pyproject.toml
config/: config.yaml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_risk_modeling.ipynb  04_segmentation.ipynb
src/: __init__.py
src/data/: make_dataset.py
src/features/: build_features.py  feature_engineering.py
src/pipeline/: run_pipeline.py
src/segmentation/: __init__.py  run_segmentation.py
src/utils/: config.py
