[project]
name = "bank-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.8",
    "numba>=0.61.0",
    "numpy<2.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
]
